[package]
name = "rkf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chardetng = "0.1.17"
clap = { version = "4.3.4", features = ["derive"] }
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
ignore = "0.4.20"
termcolor = "1.2.0"
thiserror = "1.0.40"
